added header and footer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     </head>
     <body>
         <main>
-            <!-- <div id="img-container"> -->
+            <h1 id="header">QR-code component</h1>
             <img alt="QR-CODE" src="images/image-qr-code.png">
-            <!-- </div> -->
             <div id="text">
                 <p id="p1">Improve your front-end<br>
                     skills by building projects
@@ -28,9 +27,9 @@
             </div>
         </main>
 
-        <div class="attribution">
+        <footer class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
             Coded by <a href="#">Sami</a>.
-        </div>
+        </footer>
     </body>
 </html>
